--- a/pages/about.html
+++ b/pages/about.html
@@ -107,7 +107,7 @@
                 <div class="grid wide">
                     <div class="row">
                         <div class="l-12 m-12 c-12 home__about__wp-title">
-                            <h1 class="home__about__title">ABOUT US</h1>
+                            <h1 class="home__about__title">GIỚI THIỆU</h1>
                         </div>
                     </div>
                 </div>
@@ -164,7 +164,24 @@
             </div>
         </div>
 
-        <div class="statistics">
+        <div class="sumenh">
+            <div class="grid wide">
+                <div class="row">
+                    <div class="col l-6 m-12 c-12">
+                        <div class="img">
+                            <img src="../asset/img/TẦM NHÌN - SỨ MỆNH.png" alt="" class="img--item">
+                        </div>
+                    </div>
+                    <div class="col l-6 m-12 c-12">
+                        <div class="img">
+                            <img src="../asset/img/GTCL.png" alt="" srcset="" class="img--item">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="statistics">
             <div class="grid wide">
                 <div class="statistics__title">
                     <h1>YEAR STATISTICS</h1>
@@ -378,38 +395,21 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- video  -->
-        <div class="grid wide">
-            <div class="statistics__title">
-                <h1>KIÊN GIANG TRAVELIX</h1>
-            </div>
-            <div class="row mg__bt">
-                <div class="col l-12 c-12 m-12">
-                    <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
-                        title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+        <div class="video--clip">
+            <div class="grid wide">
+                <div class="statistics__title">
+                    <h1>GIỚI THIỆU VỀ Ý TƯỞNG</h1>
                 </div>
-            </div>
-            <div class="row mg__bt">
-                <div class="col l-12 c-12 m-12">
-                    <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
-                        title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-            </div>
-            <div class="row mg__bt">
-                <div class="col l-12 c-12 m-12">
-                    <iframe class="video" src="https://www.youtube.com/embed/__5mr_Xtb30"
-                        title="Phu Quoc Paradise Pearl Island - Vietnam Travel Guide | Flycam Tp Phú Quốc | Traveller"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                <div class="row mg__bt">
+                    <div class="col l-12 c-12 m-12">
+                        <iframe class="video" src="https://www.youtube.com/embed/X3ToTIkbWGs"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
