--- a/pages/index.html
+++ b/pages/index.html
@@ -228,7 +228,7 @@
                                         <span class="item_date">May 15th - July 01st</span>
                                         <div class="item_center">
                                             <h1>Hà Tiên</h1>
-                                            <div class="item_price">From $1450</div>
+                                            <div class="item_price"></div>
                                             <div class="item_rating">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
@@ -256,7 +256,7 @@
                                         <span class="item_date">May 15th - July 01st</span>
                                         <div class="item_center">
                                             <h1>U Minh</h1>
-                                            <div class="item_price">From $1450</div>
+                                            <div class="item_price"></div>
                                             <div class="item_rating">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
@@ -284,7 +284,7 @@
                                         <span class="item_date">May 15th - July 01st</span>
                                         <div class="item_center">
                                             <h1>Phú Quốc</h1>
-                                            <div class="item_price">From $1450</div>
+                                            <div class="item_price"></div>
                                             <div class="item_rating">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
