--- a/pages/offers.html
+++ b/pages/offers.html
@@ -344,9 +344,9 @@
                 <div class="wp__offers__content">
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="../asset/img/offers_content1.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/phuquoc-tour.jpg" alt="" class="img__offers__content">
                             <div class="stickers">
-                                <a href="">grand castle</a>
+                                <a href="">Tour Phú Quốc</a>
                             </div>
                         </div>
                         <div class="col l-8 m-6 c-12">
@@ -387,9 +387,9 @@
                     </div>
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="../asset/img/offers_content2.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/namdu-tourr.jpg" alt="" class="img__offers__content">
                             <div class="stickers">
-                                <a href="">turkey hills</a>
+                                <a href="">Tour Nam Du</a>
                             </div>
                         </div>
                         <div class="col l-8 m-6 c-12">
@@ -431,9 +431,9 @@
 
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="../asset/img/offers_content2.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/hohoamai.jpg" alt="" class="img__offers__content">
                             <div class="stickers">
-                                <a href="">island dream</a>
+                                <a href="">TOUR U MINH THƯỢNG</a>
                             </div>
                         </div>
                         <div class="col l-8 m-6 c-12">
@@ -475,9 +475,9 @@
 
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="../asset/img/offers_content3.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/hatien.jpg" alt="" class="img__offers__content">
                             <div class="stickers">
-                                <a href="">travel light</a>
+                                <a href="">TOUR HÀ TIÊN</a>
                             </div>
                         </div>
                         <div class="col l-8 m-6 c-12">
@@ -519,9 +519,9 @@
 
                     <div class="row mg__bt">
                         <div class="col l-4 m-6 c-12">
-                            <img src="../asset/img/offers_content4.webp" alt="" class="img__offers__content">
+                            <img src="../asset/img/angiang-tour.jpg" alt="" class="img__offers__content">
                             <div class="stickers">
-                                <a href="">travel light</a>
+                                <a href="">TOUR AN GIANG</a>
                             </div>
                         </div>
                         <div class="col l-8 m-6 c-12">
