--- a/pages/about.html
+++ b/pages/about.html
@@ -404,9 +404,9 @@
                     <h1>GIỚI THIỆU VỀ Ý TƯỞNG</h1>
                 </div>
                 <div class="row mg__bt">
-                    <div class="col l-12 c-12 m-12">
-                        <iframe class="video" src="https://www.youtube.com/embed/X3ToTIkbWGs"
-                            title="YouTube video player" frameborder="0"
+                    <div class="col l-8 l-o-2 l c-12 m-12">
+                        <iframe class="video" src="https://www.youtube.com/embed/lyFBpt3wRhs"
+                            title="COMINGSOON - KGU TRAVEL" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                             allowfullscreen></iframe>
                     </div>
