--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,7 +62,7 @@
                                             <li class="header__nav-item"><a href="offers.html"
                                                     class="header__nav-link ">TOUR</a></li>
                                             <li class="header__nav-item"><a href="news.html"
-                                                    class="header__nav-link">TIN TỨC</a></li>
+                                                    class="header__nav-link">BẢNG TIN</a></li>
                                             <li class="header__nav-item"><a href="contact.html"
                                                     class="header__nav-link header__nav-link-active">CHĂM SÓC</a>
                                             </li>
@@ -92,7 +92,7 @@
                                 <li><a href="index.html" class="">Trang chủ</a></li>
                                 <li><a href="about.html">Giới thiệu</a></li>
                                 <li><a href="offers.html">Tour</a></li>
-                                <li><a href="news.html">Tin tức</a></li>
+                                <li><a href="news.html">Bảng tin</a></li>
                                 <li><a href="contact.html">Chăm sóc</a></li>
                             </ul>
                         </div>
@@ -156,14 +156,13 @@
                     <div class="col l-4">
                         <a href="" class="header__logo-link">
                             <div class="header__logo-img">
-                                <img src="../asset/img/logo.webp" alt="Logo" class="icon__address">
-                                <h1 class="contact__about__title">TRAVELIX</h1>
+                                <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo" class="icon__address">
+                                <h1 class="contact__about__title">KGU TRAVEL</h1>
                             </div>
                         </a>
                         <p class="text__contact__acbout">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis vu lputate eros,
-                            iaculis
-                            consequat nisl. Nunc et suscipit urna. Integer eleme ntum orci eu vehicula pretium.
+                            KGU TRAVEL đồng hành cùng những chuyến đi của bạn <br>
+                            Tận tâm - uy tín - chất lượng
                         </p>
                         <div class="footer__wp__icon">
                             <a href=""><i class="fab fa-pinterest footer__icon"></i></a>
@@ -180,25 +179,25 @@
                                 <div class="wp__img">
                                     <img src="../asset/img/address.svg" alt="" class="img__contact">
                                 </div>
-                                <p class="text__address">U Minh Thượng - Kiên Giang</p>
+                                <p class="text__address">Số 320A - T.T Minh Lương - Châu Thành - Kiên Giang</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/email.svg" alt="" class="img__contact">
                                 </div>
-                                <p class="text__address">nvothanh00@gmail.com</p>
+                                <p class="text__address">kgutravel@gmail.com</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/phone.svg" alt="" class="img__contact">
                                 </div>
-                                <p class="text__address">0943833031</p>
+                                <p class="text__address">19001505</p>
                             </div>
                             <div class="wp__content__item">
                                 <div class="wp__img">
                                     <img src="../asset/img/earth.svg" alt="" class="img__contact">
                                 </div>
-                                <p class="text__address">http://thanhthattha.com</p>
+                                <p class="text__address">http://kgutravel.edu.vn</p>
                             </div>
                         </div>
                     </div>
@@ -213,7 +212,7 @@
                         <a href="" class="header__logo-link">
                             <div class="header__logo-img">
                                 <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo">
-                                <h1>TRAVELIX</h1>
+                                <h1>KGU TRAVEL</h1>
                             </div>
                         </a>
                         <p>
