--- a/pages/news.html
+++ b/pages/news.html
@@ -62,7 +62,7 @@
                                             <li class="header__nav-item"><a href="offers.html"
                                                     class="header__nav-link">TOUR</a></li>
                                             <li class="header__nav-item"><a href="news.html"
-                                                    class="header__nav-link header__nav-link-active">TIN TỨC</a></li>
+                                                    class="header__nav-link header__nav-link-active">BẢNG TIN</a></li>
                                             <li class="header__nav-item"><a href="contact.html"
                                                     class="header__nav-link ">CHĂM SÓC</a>
                                             </li>
@@ -92,7 +92,7 @@
                                 <li><a href="index.html" class="">Trang chủ</a></li>
                                 <li><a href="about.html">Giới thiệu</a></li>
                                 <li><a href="offers.html">Tour</a></li>
-                                <li><a href="news.html">Tin tức</a></li>
+                                <li><a href="news.html">Bảng tin</a></li>
                                 <li><a href="contact.html">Chăm sóc</a></li>
                             </ul>
                         </div>
@@ -602,7 +602,7 @@
                         <a href="" class="header__logo-link">
                             <div class="header__logo-img">
                                 <img src="../asset/img/Logo KGU TRAVEL.png" alt="Logo">
-                                <h1>TRAVELIX</h1>
+                                <h1>KGU TRAVEL</h1>
                             </div>
                         </a>
                         <p>
