--- a/pages/offers.html
+++ b/pages/offers.html
@@ -560,8 +560,6 @@
                             </div>
                         </div>
 
-                     
-
                         <div class="row mg__bt">
                             <div class="col l-4 m-6 c-12">
                                 <img src="../asset/img/angiang-tour.jpg" alt="" class="img__offers__content">
@@ -733,7 +731,7 @@
     </div>
 
 
-    <div class="dialog overlay detail--hatien" id="my__dialog">
+    <div class="dialog overlay detail--hatien">
         <div class="dialog__body">
             <i class="fa-solid fa-x icon__off"></i>
             <div class="header__modal">
@@ -1107,6 +1105,7 @@
             </div>
         </div>
     </div>
+
     </body>
 
 </html>
