--- a/pages/offers.html
+++ b/pages/offers.html
@@ -597,7 +597,7 @@
                                         <img src="../asset/img/item4.webp" alt="" class="room__icon--item">
                                     </div>
                                     <div class="btn btn__book">
-                                        <a class="btn__book__link" id="btn__tourHONSON">BOOK NOW...</a>
+                                        <a class="btn__book__link" >BOOK NOW...</a>
                                     </div>
                                 </div>
                             </div>
