--- a/pages/offers.html
+++ b/pages/offers.html
@@ -371,7 +371,7 @@
                                     </div>
 
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa blanditiis.
+                                        Phú Quốc là quần đảo xinh đẹp nằm sâu trong vùng vịnh Thái Lan, thuộc tỉnh Kiên Giang. Ở vùng biển phía Nam của tổ quốc, đảo Ngọc Phú Quốc – hòn đảo lớn nhất của Việt Nam, cũng là đảo lớn nhất trong quần thể 22 đảo tại đây. Nước biển trong vắt, những dòng suối yên bình cùng nhiều hải sản độc đáo chính là lợi thế tuyệt vời của du lịch Phú Quốc.
                                     </p>
                                     <div class="room__icon">
                                         <img src="../asset/img/item1.webp" alt="" class="room__icon--item">
@@ -380,7 +380,7 @@
                                         <img src="../asset/img/item4.webp" alt="" class="room__icon--item">
                                     </div>
                                     <div class="btn btn__book">
-                                        <a class="btn__book__link">BOOK NOW...</a>
+                                        <a class="btn__book__link">Xem Thông Tin...</a>
                                     </div>
                                 </div>
                             </div>
@@ -414,7 +414,7 @@
                                     </div>
 
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa blanditiis.
+                                        Nam Du bao gồm 21 hòn đảo lớn nhỏ nằm quây quần bên nhau, tạo thành một quần thể tuyệt đẹp. Quần đảo Nam Du là quần đảo xa nhất của huyện Kiên Hải, tỉnh Kiên Giang, cách Rạch Giá hơn 80 cây số đường biển. Nơi đây hầu như chưa có sự can thiệp của các công trình nhân tạo nên nhìn chung là bạn được tận hưởng trọn vẹn tinh hoa thuần khiết nhất của trời đất, biển cả.
                                     </p>
                                     <div class="room__icon">
                                         <img src="../asset/img/item1.webp" alt="" class="room__icon--item">
@@ -423,7 +423,7 @@
                                         <img src="../asset/img/item4.webp" alt="" class="room__icon--item">
                                     </div>
                                     <div class="btn btn__book">
-                                        <a class="btn__book__link" id="btn__namdu">BOOK NOW...</a>
+                                        <a class="btn__book__link" id="btn__namdu">Xem Thông Tin...</a>
                                     </div>
                                 </div>
                             </div>
@@ -438,8 +438,8 @@
                             </div>
                             <div class="col l-8 m-6 c-12">
                                 <div class="room__wpr__item">
-                                    <span class="price">$90</span>
-                                    <span>per night</span>
+                                    <span class="price">400.000 VNĐ</span>
+                                    <span>/Người</span>
                                     <div class="item_rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -458,7 +458,7 @@
                                     </div>
 
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa blanditiis.
+                                        U Minh Thượng cũng từng là một khu vực căn cứ cách mạng ổn định trải qua hai thời kỳ kháng chiến chống Pháp và Mỹ ở khu vực Tây Nam, Đảng ủy miền Nam, Văn phòng Trung ương Tây Nam, Ủy ban hành chính và kháng chiến miền Nam, lực lượng chính của Quân khu 9, căn cứ của tỉnh Kiên Giang với 31 di tích lịch sử và văn hóa, trở thành một khu di tích lịch sử đặc biệt của tỉnh Kiên Giang
                                     </p>
                                     <div class="room__icon">
                                         <img src="../asset/img/item1.webp" alt="" class="room__icon--item">
@@ -482,8 +482,8 @@
                             </div>
                             <div class="col l-8 m-6 c-12">
                                 <div class="room__wpr__item">
-                                    <span class="price">$100</span>
-                                    <span>per night</span>
+                                    <span class="price">300.000 VNĐ</span>
+                                    <span>/Người</span>
                                     <div class="item_rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -502,7 +502,7 @@
                                     </div>
 
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa blanditiis.
+                                        Được mệnh danh là “thập vịnh cảnh” từng đi vào nhiều áng văn thơ nổi tiếng của những bậc thi nhân đại tài, Hà Tiên với những cảnh đẹp thiên nhiên đầy chất thơ, những di tích lịch sử, đền chùa miếu mạo cổ kính, linh thiêng đã trở thành một điểm đến yêu thích của nhiều người.
                                     </p>
                                     <div class="room__icon">
                                         <img src="../asset/img/item1.webp" alt="" class="room__icon--item">
@@ -526,8 +526,8 @@
                             </div>
                             <div class="col l-8 m-6 c-12">
                                 <div class="room__wpr__item">
-                                    <span class="price">$50</span>
-                                    <span>per night</span>
+                                    <span class="price">1.200.000 VNĐ</span>
+                                    <span>/Người</span>
                                     <div class="item_rating">
                                         <i class="fa fa-star"></i>
                                         <i class="fa fa-star"></i>
@@ -545,7 +545,7 @@
                                         </div>
                                     </div>
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa blanditiis.
+                                        Với những bãi biển cát trắng xinh đẹp, bãi đá hùng vĩ và thơ mộng, những rặng dừa phủ bóng xanh mát, Hòn Sơn hiện lên như một hòn ngọc lấp lánh giữa đại dương bao la, chưa có dấu vết của sự khai phá. Với không gian yên tĩnh  và vẻ đẹp hoang sơ cuốn hút bậc nhất, đảo Hòn Sơn – Kiên Giang là một địa điểm du lịch Miền Tây lý tưởng cho các kì nghỉ dưỡng, dã ngoại.
                                     </p>
                                     <div class="room__icon">
                                         <img src="../asset/img/item1.webp" alt="" class="room__icon--item">
@@ -588,7 +588,7 @@
                                         </div>
                                     </div>
                                     <p>
-                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa blanditiis.
+                                        An Giang là một trong 10 vùng du lịch trọng điểm quốc gia có một số thắng cảnh tiêu biểu như: vùng đất Thất Sơn huyền bí, Châu Đốc, Rừng tràm Trà sư, Khu lưu niệm  Chủ tịch Tôn Đức Thắng. Ngoài ra còn một số chùa chiềng phù hợp cho du lịch tìm hiểu về tôn giáo.
                                     </p>
                                     <div class="room__icon">
                                         <img src="../asset/img/item1.webp" alt="" class="room__icon--item">
@@ -597,7 +597,7 @@
                                         <img src="../asset/img/item4.webp" alt="" class="room__icon--item">
                                     </div>
                                     <div class="btn btn__book">
-                                        <a class="btn__book__link" >BOOK NOW...</a>
+                                        <a class="btn__book__link" >Xem Thông Tin...</a>
                                     </div>
                                 </div>
                             </div>
@@ -752,12 +752,12 @@
 
                 <p class="title__text__tour">Dịch vụ bao gồm:</p>
                 <div class="content__tour">
-                    • Xe đưa đón tham quan: 3 triệu (100k / người) <br>
-                    • Bữa sáng: 30k / người <br>
-                    • Bữa trưa: 100k/ người <br>
-                    • Nước suối 1 chai: 5k/ người <br>
-                    • 1 nón tour: 10k/ người <br>
-                    • Hướng dẫn chuyên nghiệp: 300k / tour ( 10k / người) <br>
+                    • Xe đưa đón tham quan<br>
+                    • Bữa sáng<br>
+                    • Bữa trưa<br>
+                    • Nước suối 1 chai<br>
+                    • 1 nón tour <br>
+                    • Hướng dẫn chuyên nghiệp <br>
                 </div>
 
                 <p class="title__text__tour">Dịch vụ không bao gồm:</p>
@@ -793,12 +793,12 @@
                 </div>
                 <p class="title__text__tour">Dịch vụ bao gồm:</p>
                 <div class="content__tour">
-                    • Xe đưa đón tham quan: 100k / người <br>
-                    • Bữa sáng: 30k / người <br>
-                    • Bữa trưa: công ty hỗ trợ 50% bữa ăn ( 50k/người ) <br>
-                    • Nước suối 1 chai: 5k/ người <br>
-                    • 1 nón tour: 10k/ người <br>
-                    • Hướng dẫn chuyên nghiệp: 300k / tour ( 10k / người) <br>
+                    • Xe đưa đón tham quan<br>
+                    • Bữa sáng <br>
+                    • Bữa trưa <br>
+                    • Nước suối 1 chai<br>
+                    • 1 nón tour <br>
+                    • Hướng dẫn chuyên nghiệp <br>
                 </div>
                 <p class="title__text__tour">Dịch vụ không bao gồm:</p>
                 <div class="content__tour">
@@ -832,11 +832,11 @@
                 </div>
                 <p class="title__text__tour">Dịch vụ bao gồm:</p>
                 <div class="content__tour">
-                    • Xe đưa đón tham quan:100k / người <br>
-                    • Bữa sáng: 20k / người <br>
-                    • Nước suối 1 chai: 5k/ người <br>
-                    • 1 nón tour: 10k/ người <br>
-                    • Hướng dẫn viên: 300k / tour ( 10k/ người) <br>
+                    • Xe đưa đón tham quan <br>
+                    • Bữa sáng <br>
+                    • Nước suối 1 chai <br>
+                    • 1 nón tour <br>
+                    • Hướng dẫn viên <br>
                 </div>
 
                 <p class="title__text__tour">Dịch vụ không bao gồm:</p>
@@ -883,12 +883,12 @@
 
                 <p class="title__text__tour">Dịch vụ bao gồm:</p>
                 <div class="content__tour">
-                    • Xe đưa đón tham quan: 3 triệu (100k / người) <br>
-                    • Bữa sáng: 30k / người <br>
-                    • Bữa trưa: 100k/ người <br>
-                    • Nước suối 1 chai: 5k/ người <br>
-                    • 1 nón tour: 10k/ người <br>
-                    • Hướng dẫn chuyên nghiệp: 300k / tour ( 10k / người) <br>
+                    • Xe đưa đón tham quan<br>
+                    • Bữa sáng<br>
+                    • Bữa trưa<br>
+                    • Nước suối<br>
+                    • 1 nón tour<br>
+                    • Hướng dẫn chuyên nghiệp<br>
                 </div>
 
                 <p class="title__text__tour">Dịch vụ không bao gồm:</p>
@@ -963,11 +963,11 @@
                 </div>
                 <p class="title__text__tour">Dịch vụ bao gồm:</p>
                 <div class="content__tour">
-                    • Xe đưa đón tham quan:100k / người <br>
-                    • Bữa sáng: 20k / người <br>
-                    • Nước suối 1 chai: 5k/ người <br>
-                    • 1 nón tour: 10k/ người <br>
-                    • Hướng dẫn viên: 300k / tour ( 10k/ người) <br>
+                    • Xe đưa đón tham quan<br>
+                    • Bữa sáng<br>
+                    • Nước suối 1 chai<br>
+                    • 1 nón tour<br>
+                    • Hướng dẫn viên chuyên nghiệp<br>
                 </div>
 
                 <p class="title__text__tour">Dịch vụ không bao gồm:</p>
@@ -1012,12 +1012,12 @@
                 </div>
                 <p class="title__text__tour">Dịch vụ bao gồm:</p>
                 <div class="content__tour">
-                    • Vé tham quan và giải trí: 100k / người <br>
-                    • Bữa sáng: 30k / người <br>
-                    • Bữa trưa: 50k/ người <br>
-                    • Nước suối 1 chai: 5k/ người <br>
-                    • 1 nón tour: 10k/ người <br>
-                    • Hướng dẫn chuyên nghiệp: 300k / tour ( 10k / người) <br>
+                    • Vé tham quan và giải trí<br>
+                    • Bữa sáng<br>
+                    • Bữa trưa<br>
+                    • Nước suối 1 chai<br>
+                    • 1 nón tour<br>
+                    • Hướng dẫn chuyên nghiệp<br>
                 </div>
                 <p class="title__text__tour">Dịch vụ không bao gồm:</p>
                 <div class="content__tour">
@@ -1060,16 +1060,16 @@
                 </div>
                 <p class="title__text__tour"> Dịch vụ bao gồm: </p>
                 <div class="content__tour">
-                    • Vé tàu khứ hồi: 280k / người<br>
-                    • Nhà nghỉ: 250k/ phòng đôi/ đêm ( 125k/người )<br>
-                    • Lặn biển ngắm san hô: 100k / người<br>
-                    • Bữa sáng: 30k / người / ngày<br>
-                    • Bữa trưa: 100k/ người<br>
-                    • Bữa tối: 50k / người<br>
-                    • Nước suối 1 chai: 5k/ người<br>
-                    • 1 nón tour: 10k/ người<br>
-                    • Xe máy tham quan: 100k/ người<br>
-                    • Hướng dẫn chuyên nghiệp: 300k / tour ( 10k / người)<br>
+                    • Vé tàu khứ hồi<br>
+                    • Nhà nghỉ<br>
+                    • Lặn biển ngắm san hô<br>
+                    • Bữa sáng<br>
+                    • Bữa trưa<br>
+                    • Bữa tối<br>
+                    • Nước suối 1 chai<br>
+                    • 1 nón tour<br>
+                    • Xe máy tham quan<br>
+                    • Hướng dẫn chuyên nghiệp<br>
                 </div>
                 <p class="title__text__tour"> Dịch vụ không bao gồm: </p>
                 <div class="content__tour">
